assets/css/app.css
/* ... */
.dropdown-menu {
font-size: 20px;
text-transform: uppercase;
}

.dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
color: #fff;
text-decoration: none;
outline: 0;
background-color: #A57513;
}

/* ==========================================================================
   Home
   ========================================================================== */

.home-banner {
padding-bottom: 32%;
background-size: contain!important;
background-repeat: no-repeat;
background-position: center;
transition:opacity .3s ease;
}

.home-banner:hover {opacity:.7;}

.navbar-brand{
   display: none!important;
}

/*Owl Control positioning*/
.owl-theme .owl-controls .owl-buttons .owl-prev {position:absolute; left:0px;}
.owl-theme .owl-controls .owl-buttons .owl-next {position:absolute; right:0px;}
.owl-theme .owl-controls {
text-align: center;
position: absolute;
top: 50%;
width: 100%;
height: 0px;
color: #fff!important;
}

.owl-item{
  padding: 5px;
}
h4.featured{
  color: #E99800;
  font-weight: bold;
}

/* Audio Player*/
.audiojs .scrubber {
position: relative;
float: left;
width: 47%;
background: #5a5a5a;
height: 14px;
margin: 10px;
border-top: 1px solid #3f3f3f;
border-left: 0px;
border-bottom: 0px;
overflow: hidden;
}
#audiojs_wrapper0{
  width: 100%;
}
.scrubber{
  background-color: rgba(0,0,0,0)!important;
  border: 1px solid #D8D8D8!important;
}
.audiojs{
  background-color: rgba(0,0,0,0)!important;
  background-image: none!important
}
.audiojs .loaded{
  background-color: rgba(0,0,0,0)!important;
  background-image: none!important
}
.audiojs .progress{
  color: #eeeeee;
}
.audiojs .play-pause{
  border-right: 0px solid #000!important;
  width: 40px;
}
.audiojs .time{
  border-left: 0px solid #000!important;
  color: #000!important;
}

.audiojs .time {
float: none!important;
}

.play-pause>p{
  display: inline-block;
font-family: FontAwesome;
font-style: normal;
font-weight: normal;
line-height: 1;
-webkit-font-smoothing: antialiased;
-moz-osx-font-smoothing: grayscale;
font-size: 1.3em;
}
p.play:before{
  content: "\f04b";
  top: 5px;
  left: 5px;
  position: relative;
}
p.pause:before{
  content: "\f04c";
  top: 5px;
  left: 5px;
  position: relative;
}
 p.loading{
  background: no-repeat center url("../img/spinnerLarge.gif")!important;
  background-size: contain!important;
  position: relative;
  top:-5px;
}
.bio-home {
margin-top: 25px;
}

.bio-home p {
line-height: 1.6;
font-weight: 100;
}

h3.quote-text {
font-size: 20px;
font-weight: 100;
text-align: center;
margin-top: 0;
line-height: 1.3em;
}

.line {
background: url(../img/JA_V04-BarLong.png) no-repeat;
width: 100%;
padding-bottom: 5%;
background-size: contain;
margin: 0 1%;
}

body.home .song-list {display:none;}
body.home .music-wrapper h6 a {color:#fff!important;}
/* ==========================================================================
   Header
   ========================================================================== */

.banner { }

/* ==========================================================================
   About
   ========================================================================== */

.about-page .blog-img-container {
margin-bottom: 30px;
}
.about p {
word-spacing: 2px;
line-height: 1.5;
}
.about-img {
margin-bottom: 15px;
}
/* ==========================================================================
   Content
   ========================================================================== */

.content { 
-webkit-box-shadow: 0 0 10px 2px rgba(0,0,0,.4);
box-shadow: 0 0 10px 2px rgba(0,0,0,.2);
border: 1px solid #BEBCB6;
}

/* ==========================================================================
   Albums - Single
   ========================================================================== */

body.single-album .entry-meta,
body.single-album .entry-title,
body.music .entry-meta,
body.music .entry-title {display:none;}

body.single-album .album-header,
body.music .album-header {margin-bottom: 30px;}

body.single-album .album-desc,
body.music .album-desc {font-size: 14px;line-height: 1.6em;font-weight: 100;}

body.single-album .featured-thumb,
body.music .featured-thumb {border: 1px solid #ccc;}

body.single-album .featured-thumb img,
body.music .featured-thumb img {border: 5px solid #fff;}

.btn {background: #A57513; color: #fff;transition:opacity .3s ease;}
.btn-sm {background: #0B5D6B;}

.btn:hover,.btn-sm:hover {
opacity: 0.6;
color:#fff!important;
}

body.single-album .buy-panel,
body.music .buy-panel,
body.single-product .buy-panel {
text-align: center;
background-color: #FFF;
border: 1px solid #ECECEC;
padding: 0% 2% 5% 2%;
}

.row-store a {display:block;}

.row-store .preview-sheet a,
.row-store .buy-sheet a {
text-align: center;
color: #fff;
width: 142px;
margin: 0px auto;	
}

.song-list,
.song-list li {
list-style: none;
list-style-type: none;
margin:0px;
padding:0px;
}

.song-list li {}

.song-list .col-sm-6 {padding: 10px 0px;}
.song-list .col-sm-6:nth-child(1) {border-right: 1px solid #ccc;}
.song-list .song {border-right:1px solid #ccc;}

.track-title {
padding: 10px;
font-size: 16px;
text-align: center;
position: relative;
top: 5px;
}
.play-button {
border-radius: 50%;
height: 30px;
width: 30px;
border: 1px solid #ccc;
float: left;
}

.play-button i {padding: 7px 9px;}

.sm2_link .fa :before, .sm2_paused .fa:before {
content: "\f04b";
}
.sm2_playing .fa:before{
  content: "\f04c";
}


/* ==========================================================================
   Store
   ========================================================================== */

body.store .album-excerpt a {display:none;}  
body.store .album-excerpt {
margin: 15px 0px;
height: auto;
overflow: hidden;
padding-bottom: 0px;
}

body.store .add_to_cart_button,
body.store .view-details {width:100%; margin-bottom:15px;}
   
.store-table-header{
background-color: #D8D0B2;
margin: 0 0%;
margin-bottom: 15px;
text-align: center;
}
/* ... */

